--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "axios": "^1.7.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "sass": "^1.77.6",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
